--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,6 +34,9 @@ services:
       MQTT_PORT: 1883
       LIFELINE_TIME:
       LOG_LIFELINE:
+    networks:
+      - mqtt
+      - default
     ports:
       - 3000:3000
     depends_on:
