--- a/images/api/package.json
+++ b/images/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.14",
+    "mqtt": "^4.3.7",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1"
   }
