--- a/images/manager/package.json
+++ b/images/manager/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "mqtt": "^4.3.7",
     "nodemon": "^2.0.20",
-    "socket.io": "4.5.2"
+    "socket.io": "4.5.2",
+    "ws": "^8.9.0"
   }
 }
