--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -68,6 +68,14 @@ services:
       - 3004:3001
     restart: unless-stopped
 
+
+  mechanical:
+    image: "$OWNER/collagemechanical:$VERSION"
+    command: ["npm", "run", "start"]
+    ports:
+      - 3333:3000
+    restart: unless-stopped
+
   web:
     image: "$OWNER/collageweb:$VERSION"
     restart: unless-stopped
