--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,12 +3,14 @@ version: "3.8"
 services:
   
   collageStore:
-    image: "postgres:latest"
+    image: "postgres:15.1"
     ports:
       - 5432:5432
-    command: postgres -c stats_temp_directory=/tmp
+    command: postgres
     environment:
       POSTGRES_USER:
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DATABASE:
       POSTGRES_PASSWORD:
     healthcheck:
@@ -89,6 +91,17 @@ services:
     restart: always
     volumes:
       - ./images/manager/src:/usr/app/src
+
+
+  mechanical:
+    build: ./images/mechanical
+    image: "$OWNER/collagemechanical:$VERSION"
+    command: ["npm", "run", "dev"]
+    ports:
+      - 3333:3000
+    restart: always
+    volumes:
+      - ./images/mechanical/src:/usr/app/src
 
   mqttBroker:
     image: "eclipse-mosquitto:latest"
