--- a/Caddyfile
+++ b/Caddyfile
@@ -20,3 +20,31 @@ manager.datacratie.cc {
         header_down Strict-Transport-Security max-age=31536000;
     }
 }
+api.collage.gent {
+    reverse_proxy api:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
+explore.collage.gent {
+    reverse_proxy explorer:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
+media.collage.gent {
+    reverse_proxy filestore:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
+collage.gent {
+    reverse_proxy web:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+manager..collage.gent {
+    reverse_proxy web:3001 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
