--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -114,7 +114,7 @@ services:
   watchtower:
     image: containrrr/watchtower
     environment:
-      - WATCHTOWER_POLL_INTERVAL: 3600
+      WATCHTOWER_POLL_INTERVAL: 3600
     command: "--interval 60 --cleanup"   
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
