--- a/.env.template
+++ b/.env.template
@@ -11,8 +11,8 @@ OWNER=crshlab
 
 START_SCRIPT=dev
 NODE_ENV=dev
-REACT_APP_API_ADDR=https://api.datacratie.cc
-REACT_APP_MEDIA_ADDR=https://media.datacratie.cc
+REACT_APP_API_ADDR=https://api.collage.gent
+REACT_APP_MEDIA_ADDR=https://media.collage.gent
 CANVAS_WIDTH=2000
 WEB_PORT=8001
 CLIPPER_PORT=8002
