--- a/Caddyfile
+++ b/Caddyfile
@@ -1,33 +1,5 @@
-api.datacratie.cc {
-    reverse_proxy api:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-media.datacratie.cc {
-    reverse_proxy filestore:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-web.datacratie.cc {
-    reverse_proxy web:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-manager.datacratie.cc {
-    reverse_proxy web:3001 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
 api.collage.gent {
     reverse_proxy api:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-explore.collage.gent {
-    reverse_proxy explorer:3000 {
         header_down Strict-Transport-Security max-age=31536000;
     }
 }
@@ -38,12 +10,30 @@ media.collage.gent {
     }
 }
 
+web.collage.gent {
+    reverse_proxy web:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+manager.collage.gent {
+    reverse_proxy web:3001 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
+explore.collage.gent {
+    reverse_proxy explorer:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
 collage.gent {
     reverse_proxy web:3000 {
         header_down Strict-Transport-Security max-age=31536000;
     }
 }
-manager..collage.gent {
+
+touch.collage.gent {
     reverse_proxy web:3001 {
         header_down Strict-Transport-Security max-age=31536000;
     }
