--- a/images/explorer/package.json
+++ b/images/explorer/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "live-server /usr/app/src --port=3033",
-    "start": "serve"
+    "start": "serve /usr/app/src -p 3000 -C"
   },
   "author": "",
   "license": "ISC",
