--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -44,17 +44,16 @@ services:
         condition: service_healthy
 
 
-  explorer:
-    image: "$OWNER/collageexplorer:$VERSION"
-    command: ["npm", "run", "start"]
+  projection:
+    image: "$OWNER/collageprojection:$VERSION"
+    restart: unless-stopped
+    ports:
+      - 8084:3000
+      - 8083:80
     environment: 
       REACT_APP_API_ADDR:
       REACT_APP_MEDIA_ADDR:
-    networks:
-      - mqtt
-    ports:
-      - 3033:3000
-    restart: always
+
 
   filestore:
     image: "$OWNER/collagefilestore:$VERSION"
