--- a/images/static/package.json
+++ b/images/static/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
-  "productName": "my-app",
+  "name": "collagegent",
+  "productName": "collagegent",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Application for collage gent",
   "main": "src/index.js",
   "scripts": {
 
