--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -61,7 +61,7 @@ services:
 
 
   web:
-    build: ./images/static
+    build: ./images/web
     image: "$OWNER/collageweb:$VERSION"
     restart: always
     command: ["npm", "run", "start"]
@@ -72,8 +72,23 @@ services:
       - 8080:3000
       - 8081:80
     volumes:
-      - ./images/static/src:/usr/app/src
-      - ./images/static/build:/usr/app/build
+      - ./images/web/src:/usr/app/src
+      - ./images/web/build:/usr/app/build
+
+  touch:
+    build: ./images/touch
+    image: "$OWNER/collagetouch:$VERSION"
+    restart: always
+    command: ["npm", "run", "start"]
+    environment: 
+      REACT_APP_API_ADDR: api
+      REACT_APP_MEDIA_ADDR: filestore
+    ports:
+      - 8888:3000
+      - 8081:80
+    volumes:
+      - ./images/touch/src:/usr/app/src
+      - ./images/touch/build:/usr/app/build
 
 
 
@@ -133,20 +148,6 @@ services:
     networks:
       - mqtt
 
-  explorer:
-    build: ./images/explorer
-    image: "$OWNER/collageexplorer:$VERSION"
-    command: ["npm", "run", "dev"]
-    environment: 
-      REACT_APP_API_ADDR:
-      REACT_APP_MEDIA_ADDR:
-    networks:
-      - mqtt
-    ports:
-      - 3033:3000
-    restart: always
-    volumes:
-      - ./images/explorer/src:/usr/app/src
 
 networks:
   mqtt:
