--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -61,10 +61,11 @@ services:
 
 
   web:
-    build: ./images/web
+    build: 
+      context: ./images/web
+      dockerfile: Dockerfile.prod
     image: "$OWNER/collageweb:$VERSION"
     restart: always
-    command: ["npm", "run", "start"]
     environment: 
       REACT_APP_API_ADDR: api
       REACT_APP_MEDIA_ADDR: filestore
@@ -85,7 +86,7 @@ services:
       REACT_APP_MEDIA_ADDR: filestore
     ports:
       - 8888:3000
-      - 8081:80
+      - 8088:80
     volumes:
       - ./images/touch/src:/usr/app/src
       - ./images/touch/build:/usr/app/build
