--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,22 @@
+collage.gent {
+    reverse_proxy web:80 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+touch.collage.gent {
+    reverse_proxy touch:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
 api.collage.gent {
     reverse_proxy api:3000 {
+        header_down Strict-Transport-Security max-age=31536000;
+    }
+}
+
+explore.collage.gent {
+    reverse_proxy explorer:3000 {
         header_down Strict-Transport-Security max-age=31536000;
     }
 }
@@ -12,24 +29,6 @@ media.collage.gent {
 
 manager.collage.gent {
     reverse_proxy web:3001 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-explore.collage.gent {
-    reverse_proxy explorer:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-touch.collage.gent {
-    reverse_proxy static:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
-    }
-}
-
-collage.gent {
-    reverse_proxy web:3000 {
         header_down Strict-Transport-Security max-age=31536000;
     }
 }
