--- a/images/projection/package.json
+++ b/images/projection/package.json
@@ -26,6 +26,7 @@
     "live-server": "^1.2.2",
     "serve": "^14.0.1",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "watch-server": "^1.3.0",
     "watchify": "^4.0.0",
     "ws": "^8.12.1"
