--- a/images/touch/package.json
+++ b/images/touch/package.json
@@ -5,14 +5,10 @@
   "description": "Application for collage gent",
   "main": "src/index.js",
   "scripts": {
-
     "dev": "concurrently --kill-others \"npm run build-watch\" \"npm run serve-live\"",
-
     "build-watch": "watchify ./src/main.js -o servable/bundle.js",
     "serve-live": "live-server ./servable --port=3000",
-
     "start": "browserify /usr/app/src/main.js -o /usr/app/servable/bundle.js && serve /usr/app/servable",
-
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -29,6 +25,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "live-server": "^1.2.2",
     "serve": "^14.0.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "watch-server": "^1.3.0",
     "watchify": "^4.0.0"
   },
