--- a/images/touch/package.json
+++ b/images/touch/package.json
@@ -8,8 +8,10 @@
     "dev": "concurrently --kill-others \"npm run build-watch\" \"npm run serve-live\"",
     "build-watch": "watchify ./src/main.js -o servable/bundle.js",
     "serve-live": "live-server ./servable --port=3000",
+    "serve-live-src": "live-server ./src --port=3000",
     "start": "browserify /usr/app/src/main.js -o /usr/app/servable/bundle.js && serve /usr/app/servable",
     "serve": "serve /usr/app/servable",
+    "serve-local": "browserify ./src/main.js -o ./servable/bundle.js && serve ./servable",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
