--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3.8"
 services:
   
   collageStore:
-    image: "postgres:latest"
+    image: "postgres:15.1"
     ports:
       - 5432:5432
-    networks:
-      - mqtt
-    command: postgres -c stats_temp_directory=/tmp
+    command: postgres
     environment:
       POSTGRES_USER:
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DATABASE:
       POSTGRES_PASSWORD:
     healthcheck:
@@ -24,7 +24,7 @@ services:
 
   api:
     build: ./images/api
-    image: "$OWNER/api:$VERSION"
+    image: "$OWNER/collageapi:$VERSION"
     command: ["npm", "run", "dev"]
     restart: always
     environment:
@@ -38,6 +38,7 @@ services:
       LOG_LIFELINE:
     networks:
       - mqtt
+      - default
     ports:
       - 3000:3000
     depends_on:
@@ -48,20 +49,107 @@ services:
 
   filestore:
     build: ./images/filestore
-    image: "$OWNER/filestore:$VERSION"
+    image: "$OWNER/collagefilestore:$VERSION"
     command: ["npm", "run", "dev"]
     restart: always
+    ports:
+      - 3030:3000
+    volumes:
+      - ./images/filestore/src:/usr/app/src
+      - ./_uploads:/usr/app/uploads
+      - ./_pictograms:/usr/app/pictograms
+
+
+  web:
+    build: 
+      context: ./images/web
+      dockerfile: Dockerfile.prod
+    image: "$OWNER/collageweb:$VERSION"
+    restart: always
+    environment: 
+      REACT_APP_API_ADDR: api
+      REACT_APP_MEDIA_ADDR: filestore
+    ports:
+      - 8080:3000
+      - 8081:80
+    volumes:
+      - ./images/web/src:/usr/app/src
+      - ./images/web/build:/usr/app/build
+
+  touch:
+    build: ./images/touch
+    image: "$OWNER/collagetouch:$VERSION"
+    restart: always
+    command: ["npm", "run", "start"]
+    environment: 
+      REACT_APP_API_ADDR: api
+      REACT_APP_MEDIA_ADDR: filestore
+    ports:
+      - 8888:3000
+      - 8088:80
+    volumes:
+      - ./images/touch/src:/usr/app/src
+      - ./images/touch/build:/usr/app/build
+
+
+
+  projection:
+    build: ./images/projection
+    image: "$OWNER/collageprojection:$VERSION"
+    restart: always
+    command: ["npm", "run", "start"]
+    environment: 
+      REACT_APP_API_ADDR: api
+      REACT_APP_MEDIA_ADDR: filestore
+    ports:
+      - 8084:3000
+      - 8083:80
+    volumes:
+      - ./images/projection/src:/usr/app/src
+      - ./images/projection/build:/usr/app/build
+
+
+  manager:
+    build: ./images/manager
+    image: "$OWNER/collagemanager:$VERSION"
+    command: ["npm", "run", "dev"]
     environment:
-      POSTGRES_USER:
-      POSTGRES_DATABASE:
-      POSTGRES_PASSWORD:
-      POSTGRES_HOST: collageStore
+      MQTT_ADDR: 
+      MQTT_PORT: 1883
     networks:
       - mqtt
     ports:
-      - 3030:3000
-    depends_on:
-      collageStore:
-        condition: service_healthy
+      - 3003:3000
+      - 3004:3001
+    restart: always
     volumes:
-      - ./images/filestore/src:/usr/app/src
+      - ./images/manager/src:/usr/app/src
+
+
+  mechanical:
+    build: ./images/mechanical
+    image: "$OWNER/collagemechanical:$VERSION"
+    command: ["npm", "run", "dev"]
+    ports:
+      - 3333:3000
+    restart: always
+    volumes:
+      - ./images/mechanical/src:/usr/app/src
+
+  mqttBroker:
+    image: "eclipse-mosquitto:latest"
+    volumes:
+      - ./images/mqtt/config:/mosquitto/config
+      - ./images/mqtt/data:/mosquitto/data
+      - ./images/mqtt/log:/mosquitto/log
+    ports:
+      - 9001:9001
+      - 1883:1883
+    restart: always
+    networks:
+      - mqtt
+
+
+networks:
+  mqtt:
+    driver: bridge
